Fix: Prevent Media & Text block from stacking in preview on larger devices
Ensured the Media & Text block displays components side by side in the preview, even on larger devices. The preview container was previously too small, causing the elements to stack. This change ensures the components remain properly aligned in the preview.

--- a/packages/block-library/src/media-text/style.scss
+++ b/packages/block-library/src/media-text/style.scss
@@ -54,6 +54,11 @@
 	word-break: break-word;
 }
 
+.block-editor-block-preview__content-iframe .wp-block-media-text > .wp-block-media-text__content {
+	grid-column: 2 !important;
+	grid-row: 1 !important;
+}
+
 .wp-block-media-text.has-media-on-the-right > .wp-block-media-text__media {
 	/*!rtl:begin:ignore*/
 	grid-column: 2;
@@ -132,7 +137,7 @@
 */
 @media (max-width: #{ ($break-small) }) {
 	.wp-block-media-text.is-stacked-on-mobile {
-		grid-template-columns: 100% !important;
+		grid-template-columns: 100%;
 		> .wp-block-media-text__media {
 			grid-column: 1;
 			grid-row: 1;
